# game_world

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  font.json
assets/animations/: defender-robot.json  fast-transport-belt.json  transport-belt.json  worm-attack-2.json
assets/fonts/: readme.md
assets/shaders/: font.frag  sprite.frag  sprite.vert
renderer/: shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  sprite_surface.cpp  sprite_surface.hpp
src/: main.cpp
util/: animation_library.cpp  animation_library.hpp  atlas_generator.cpp  fps_counter.hpp  msdf_font.hpp  sprite_sheet.cpp  sprite_sheet.hpp  texture.cpp  texture.hpp
